tests/snapshots/ui_snapshots__calendar_component__calendar_empty.snap
---
source: tests/ui_snapshots.rs
assertion_line: 370
expression: output
---
┌ December 2025 (</>) ───────────────────────────────────────────────┐┌ Tasks for 12/9 ────────────┐
│                        Mo Tu We Th Fr Sa Su                        ││ No tasks due               │
│                        1  2  3  4  5  6  7                         ││                            │
│                        8  9 10 11 12 13 14                         ││                            │
│                       15 16 17 18 19 20 21                         ││                            │
│                       22 23 24 25 26 27 28                         ││                            │
│                       29 30 31                                     ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                ←/→ day  ↑/↓ week  </> month                        ││                            │
└────────────────────────────────────────────────────────────────────┘└────────────────────────────┘
