tests/snapshots/ui_snapshots__calendar_component__calendar_view.snap
---
source: tests/ui_snapshots.rs
assertion_line: 356
expression: output
---
┌ December 2025 (</>) ───────────────────────────────────────────────┐┌ Tasks for 12/9 ────────────┐
│                        Mo Tu We Th Fr Sa Su                        ││!!! [ ] Task with due date  │
│                        1  2  3  4  5  6  7                         ││!! [!] Blocked task         │
│                        8  9 10 11 12 13 14                         ││!!! [ ] Review PR           │
│                       15 16 17 18 19 20 21                         ││!! [ ] Write documentation  │
│                       22 23 24 25 26 27 28                         ││!!!! [~] Fix critical bug   │
│                       29 30 31                                     ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                                                                    ││                            │
│                ←/→ day  ↑/↓ week  </> month                        ││                            │
└────────────────────────────────────────────────────────────────────┘└────────────────────────────┘
